--- a/src/main/resources/assets/tofurtherworld/lang/en_us.json
+++ b/src/main/resources/assets/tofurtherworld/lang/en_us.json
@@ -189,6 +189,8 @@
     "block.tofurtherworld.drawer":"\u00A70Drawer",
     "block.tofurtherworld.drawer_1":"\u00A7fDrawer(transverse)",
     "block.tofurtherworld.drawer_2":"\u00A7fDrawer(vertical)",
+    "block.tofurtherworld.forging_table_l1":"\u00A7fForging table§7 - §2§oLEVEL1",
+    "block.tofurtherworld.forging_table_l1_t":"\u00A70Forging table§7 - §2§oLEVEL1",
 
     "block.tofurtherworld.apple_block":"\u00A7fApple block",
     "block.tofurtherworld.icebirch_sapling":"\u00A7fIce birch sappling",
@@ -196,6 +198,7 @@
     "block.tofurtherworld.icebirch_leaves":"\u00A7fIce birch leaves",
     "block.tofurtherworld.icebirch_planks":"\u00A7fIce birch planks",
     "block.tofurtherworld.stripped_icebirch_log":"\u00A7fStripped ice birch log",
+    "block.tofurtherworld.frozen_bush":"\u00A7fFrozen bush",
 
     "itemGroup.tofurtherworld.material":"TFW-Material",
     "itemGroup.tofurtherworld.block":"TFW-Block",
