--- a/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
+++ b/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
@@ -192,6 +192,8 @@
     "block.tofurtherworld.forging_table_l1":"\u00A7f锻造台§7·§2§o1级",
     "block.tofurtherworld.forging_table_l1_t":"\u00A70锻造台§7·§2§o1级",
 
+    "block.tofurtherworld.wooden_chair":"\u00A7f木制椅子",
+
     "block.tofurtherworld.apple_block":"\u00A7f苹果方块",
     "block.tofurtherworld.icebirch_sapling":"\u00A7f冰桦木树苗",
     "block.tofurtherworld.icebirch_log":"\u00A7f冰桦木树干",
