--- a/src/main/resources/assets/tofurtherworld/lang/en_us.json
+++ b/src/main/resources/assets/tofurtherworld/lang/en_us.json
@@ -192,6 +192,8 @@
     "block.tofurtherworld.forging_table_l1":"\u00A7fForging table§7 - §2§oLEVEL1",
     "block.tofurtherworld.forging_table_l1_t":"\u00A70Forging table§7 - §2§oLEVEL1",
 
+    "block.tofurtherworld.wooden_chair":"\u00A7fWooden chair",
+
     "block.tofurtherworld.apple_block":"\u00A7fApple block",
     "block.tofurtherworld.icebirch_sapling":"\u00A7fIce birch sappling",
     "block.tofurtherworld.icebirch_log":"\u00A7fIce birch log",
