--- a/src/main/resources/assets/tofurtherworld/lang/en_us.json
+++ b/src/main/resources/assets/tofurtherworld/lang/en_us.json
@@ -193,6 +193,8 @@
     "block.tofurtherworld.forging_table_l1_t":"\u00A70Forging table§7 - §2§oLEVEL1",
 
     "block.tofurtherworld.wooden_chair":"\u00A7fWooden chair",
+    "block.tofurtherworld.wooden_longtable":"\u00A7fWooden long table",
+    "block.tofurtherworld.aluminum_chair":"\u00A7fAluminum chair",
 
     "block.tofurtherworld.apple_block":"\u00A7fApple block",
     "block.tofurtherworld.icebirch_sapling":"\u00A7fIce birch sappling",
