--- a/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
+++ b/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
@@ -193,6 +193,8 @@
     "block.tofurtherworld.forging_table_l1_t":"\u00A70锻造台§7·§2§o1级",
 
     "block.tofurtherworld.wooden_chair":"\u00A7f木制椅子",
+    "block.tofurtherworld.wooden_longtable":"\u00A7f木制长桌",
+    "block.tofurtherworld.aluminum_chair":"\u00A7f铝制椅子",
 
     "block.tofurtherworld.apple_block":"\u00A7f苹果方块",
     "block.tofurtherworld.icebirch_sapling":"\u00A7f冰桦木树苗",
