新增铝制桌子

--- a/src/main/resources/assets/tofurtherworld/lang/en_us.json
+++ b/src/main/resources/assets/tofurtherworld/lang/en_us.json
@@ -195,6 +195,8 @@
     "block.tofurtherworld.wooden_chair":"\u00A7fWooden chair",
     "block.tofurtherworld.wooden_longtable":"\u00A7fWooden long table",
     "block.tofurtherworld.aluminum_chair":"\u00A7fAluminum chair",
+    "block.tofurtherworld.aluminum_table":"\u00A7fAluminum table",
+    "block.tofurtherworld.table":"\u00A70Table",
 
     "block.tofurtherworld.apple_block":"\u00A7fApple block",
     "block.tofurtherworld.icebirch_sapling":"\u00A7fIce birch sappling",
