--- a/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
+++ b/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
@@ -195,6 +195,8 @@
     "block.tofurtherworld.wooden_chair":"\u00A7f木制椅子",
     "block.tofurtherworld.wooden_longtable":"\u00A7f木制长桌",
     "block.tofurtherworld.aluminum_chair":"\u00A7f铝制椅子",
+    "block.tofurtherworld.aluminum_table":"\u00A7f铝制桌子",
+    "block.tofurtherworld.table":"\u00A70桌子",
 
     "block.tofurtherworld.apple_block":"\u00A7f苹果方块",
     "block.tofurtherworld.icebirch_sapling":"\u00A7f冰桦木树苗",
