--- a/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
+++ b/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
@@ -136,6 +136,7 @@
     "block.tofurtherworld.steel_block":"\u00A7f钢块",
     "block.tofurtherworld.turbid_obsidian_block":"\u00A7f浑浊的黑曜石块",
     "block.tofurtherworld.pure_obsidian_block":"\u00A7f纯净的黑曜石块",
+    "block.tofurtherworld.prismarine_bricks_smooth":"\u00A7f平滑海晶石砖",
 
     "block.tofurtherworld.white_lego":"\u00A7f白色\u00A7m乐高\u00A7r块",
     "block.tofurtherworld.orange_lego":"\u00A7f橙色\u00A7m乐高\u00A7r块",
@@ -189,6 +190,8 @@
     "block.tofurtherworld.drawer":"\u00A70抽屉",
     "block.tofurtherworld.drawer_1":"\u00A7f抽屉（横向）",
     "block.tofurtherworld.drawer_2":"\u00A7f抽屉（竖向）",
+    "block.tofurtherworld.chiseled_iron_box":"\u00A7f錾制铁箱",
+    "block.tofurtherworld.chiseled_iron_box.text":"\u00A70錾制铁箱",
     "block.tofurtherworld.forging_table_l1":"\u00A7f锻造台§7·§2§o1级",
     "block.tofurtherworld.forging_table_l1_t":"\u00A70锻造台§7·§2§o1级",
 
