玩具枪修正

--- a/src/main/resources/assets/tofurtherworld/lang/en_us.json
+++ b/src/main/resources/assets/tofurtherworld/lang/en_us.json
@@ -81,6 +81,8 @@
     "item.tofurtherworld.obsidian_pickaxe":"\u00A7fObsidian pickaxe",
     "item.tofurtherworld.obsidian_shovel":"\u00A7fObsidian shovel",
     "item.tofurtherworld.obsidian_hoe":"\u00A7fObsidian hoe",
+    "item.tofurtherworld.melon_gun":"\u00A7fMelon gun",
+    "item.tfw.mg.text":"\u00A7fYou don't have enough melon seeds.",
 
     "item.tofurtherworld.tiny_rock":"\u00A7fTiny rock",
     "item.tofurtherworld.stone_chippings":"\u00A7fStone chippings",
