--- a/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
+++ b/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
@@ -83,6 +83,8 @@
     "item.tofurtherworld.obsidian_pickaxe":"\u00A7f黑曜石镐",
     "item.tofurtherworld.obsidian_shovel":"\u00A7f黑曜石铲",
     "item.tofurtherworld.obsidian_hoe":"\u00A7f黑曜石锄",
+    "item.tofurtherworld.melon_gun":"\u00A7f西瓜枪",
+    "item.tfw.mg.text":"\u00A7f你没有足够的西瓜种子。",
 
     "item.tofurtherworld.tiny_rock":"\u00A7f小石块",
     "item.tofurtherworld.stone_chippings":"\u00A7f碎石块",
