--- a/src/main/resources/assets/tofurtherworld/lang/en_us.json
+++ b/src/main/resources/assets/tofurtherworld/lang/en_us.json
@@ -205,12 +205,15 @@
     "block.tofurtherworld.chiseled_iron_box.text":"\u00A70Chiseled iron box",
     "block.tofurtherworld.forging_table_l1":"\u00A7fForging table§7 - §2§oLEVEL1",
     "block.tofurtherworld.forging_table_l1_t":"\u00A70Forging table§7 - §2§oLEVEL1",
+    "block.tofurtherworld.grinder":"\u00A7fGrinder",
+    "block.tofurtherworld.grinder_t":"\u00A0fGrinder",
 
     "block.tofurtherworld.wooden_chair":"\u00A7fWooden chair",
     "block.tofurtherworld.wooden_longtable":"\u00A7fWooden long table",
     "block.tofurtherworld.aluminum_chair":"\u00A7fAluminum chair",
     "block.tofurtherworld.aluminum_table":"\u00A7fAluminum table",
     "block.tofurtherworld.table":"\u00A70Table",
+    "block.tofurtherworld.ruin_bookshelf":"\u00A7fRuin bookshelf",
 
     "block.tofurtherworld.apple_block":"\u00A7fApple block",
     "block.tofurtherworld.icebirch_sapling":"\u00A7fIce birch sappling",
