--- a/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
+++ b/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
@@ -205,12 +205,15 @@
     "block.tofurtherworld.chiseled_iron_box.text":"\u00A70錾制铁箱",
     "block.tofurtherworld.forging_table_l1":"\u00A7f锻造台§7·§2§o1级",
     "block.tofurtherworld.forging_table_l1_t":"\u00A70锻造台§7·§2§o1级",
+    "block.tofurtherworld.grinder":"\u00A7f研磨机",
+    "block.tofurtherworld.grinder_t":"\u00A70研磨机",
 
     "block.tofurtherworld.wooden_chair":"\u00A7f木制椅子",
     "block.tofurtherworld.wooden_longtable":"\u00A7f木制长桌",
     "block.tofurtherworld.aluminum_chair":"\u00A7f铝制椅子",
     "block.tofurtherworld.aluminum_table":"\u00A7f铝制桌子",
     "block.tofurtherworld.table":"\u00A70桌子",
+    "block.tofurtherworld.ruin_bookshelf":"\u00A7f遗迹书架",
 
     "block.tofurtherworld.apple_block":"\u00A7f苹果方块",
     "block.tofurtherworld.icebirch_sapling":"\u00A7f冰桦木树苗",
