--- a/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
+++ b/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
@@ -207,6 +207,8 @@
     "block.tofurtherworld.forging_table_l1_t":"\u00A70锻造台§7·§2§o1级",
     "block.tofurtherworld.grinder":"\u00A7f研磨机",
     "block.tofurtherworld.grinder_t":"\u00A70研磨机",
+    "block.tofurtherworld.refiner":"\u00A7f精炼机",
+    "block.tofurtherworld.refiner_t":"\u00A70精炼机",
 
     "block.tofurtherworld.wooden_chair":"\u00A7f木制椅子",
     "block.tofurtherworld.wooden_longtable":"\u00A7f木制长桌",
