--- a/src/main/resources/assets/tofurtherworld/lang/en_us.json
+++ b/src/main/resources/assets/tofurtherworld/lang/en_us.json
@@ -90,6 +90,19 @@
     "item.tofurtherworld.melon_gun":"\u00A7fMelon gun",
     "item.tfw.mg.text":"\u00A7fYou don't have enough melon seeds.",
 
+    "item.tofurtherworld.copper_helmet":"\u00A7fCopper helmet",
+    "item.tofurtherworld.copper_chestplate":"\u00A7fCopper chestplate",
+    "item.tofurtherworld.copper_leggings":"\u00A7fCopper leggings",
+    "item.tofurtherworld.copper_boots":"\u00A7fCopper boots",
+    "item.tofurtherworld.aluminum_helmet":"\u00A7fAluminum helmet",
+    "item.tofurtherworld.aluminum_chestplate":"\u00A7fAluminum chestplate",
+    "item.tofurtherworld.aluminum_leggings":"\u00A7fAluminum leggings",
+    "item.tofurtherworld.aluminum_boots":"\u00A7fAluminum boots",
+    "item.tofurtherworld.stonebrick_helmet":"\u00A7fStoneBrick helmet",
+    "item.tofurtherworld.stonebrick_chestplate":"\u00A7fStoneBrick chestplate",
+    "item.tofurtherworld.stonebrick_leggings":"\u00A7fStoneBrick leggings",
+    "item.tofurtherworld.stonebrick_boots":"\u00A7fStoneBrick boots",
+
     "item.tofurtherworld.tiny_rock":"\u00A7fTiny rock",
     "item.tofurtherworld.stone_chippings":"\u00A7fStone chippings",
     "item.tofurtherworld.rich_ore_stone_chippings":"\u00A7fRich ore stone chippings",
@@ -102,10 +115,14 @@
     "item.tofurtherworld.rattan":"\u00A7fRattan",
     "item.tofurtherworld.wooden_staff":"\u00A7fWooden staff",
     "item.tofurtherworld.wooden_board":"\u00A7fWooden board",
+    "item.tofurtherworld.sawdust":"\u00A7fSawdust",
     "item.tofurtherworld.turbid_fragment_of_obsidian":"\u00A7fTurbid fragment of obsidian",
     "item.tofurtherworld.pure_fragment_of_obsidian":"\u00A7fPure fragment of obsidian",
     "item.tofurtherworld.turbid_obsidian":"\u00A7fTurbid obsidian",
     "item.tofurtherworld.pure_obsidian":"\u00A7fPure obsidian",
+
+    "item.tofurtherworld.plastic_wood_board":"\u00A7fPlastic wood board",
+    "item.tofurtherworld.plastic_wood_stick":"\u00A7fPlastic wood stick",
 
     "item.tofurtherworld.apple_piece":"\u00A7fApple piece",
 
@@ -116,7 +133,27 @@
     "item.tofurtherworld.warped_wart_slurries":"\u00A7fWarped wart slurries",
 
     "item.tofurtherworld.empty_blueprint":"\u00A7fEmpty blueprint",
-    "item.tofurtherworld.blueprint":"\u00A7fBlueprint",
+    "item.tofurtherworld.blueprint_r1":"\u00A7fBlueprint",
+    "item.tofurtherworld.blueprint_r2":"\u00A7fBlueprint",
+    "item.tofurtherworld.blueprint_r3":"\u00A7fBlueprint",
+    "item.tofurtherworld.blueprint_r4":"\u00A7fBlueprint",
+    "item.tofurtherworld.blueprint_r5":"\u00A7fBlueprint",
+    "item.tofurtherworld.blueprint_r6":"\u00A7fBlueprint",
+    "item.tofurtherworld.blueprint_r7":"\u00A7fBlueprint",
+    "item.tofurtherworld.blueprint_r8":"\u00A7fBlueprint",
+    "item.tofurtherworld.blueprint_r9":"\u00A7fBlueprint",
+    "item.tofurtherworld.blueprint_r0":"\u00A7fBlueprint",
+
+    "item.tofurtherworld.blueprint_r1.f":"\u00A72Common",
+    "item.tofurtherworld.blueprint_r2.f":"\u00A73Normal",
+    "item.tofurtherworld.blueprint_r3.f":"\u00A7eUncommon",
+    "item.tofurtherworld.blueprint_r4.f":"\u00A7bRare",
+    "item.tofurtherworld.blueprint_r5.f":"\u00A79Hard to meet",
+    "item.tofurtherworld.blueprint_r6.f":"\u00A7d\u00A7oEPIC",
+    "item.tofurtherworld.blueprint_r7.f":"\u00A7f\u00A7k|||15730063|||",
+    "item.tofurtherworld.blueprint_r8.f":"\u00A76\u00A7lGolden Legend",
+    "item.tofurtherworld.blueprint_r9.f":"\u00A7c\u00A7l\u00A7oSSR",
+    "item.tofurtherworld.blueprint_r0.f":"\u00A77Junk...",
 
     "item.tofurtherworld.pda":"\u00A7bPDA",
     "item.tfw.pda.text":"\u00A7bRight click to use.",
@@ -151,6 +188,7 @@
     "block.tofurtherworld.alchemical_silver_block":"\u00A7fAlchemical silver block",
     "block.tofurtherworld.hard_aluminum_block":"\u00A7fHard aluminum block",
     "block.tofurtherworld.wooden_planks":"\u00A7fWooden planks",
+    "block.tofurtherworld.plastic_wood_planks":"\u00A7fPlastic wood planks",
 
     "block.tofurtherworld.white_lego":"\u00A7fWhite \u00A7mlego \u00A7rblock",
     "block.tofurtherworld.orange_lego":"\u00A7fOrange \u00A7mlego \u00A7rblock",
@@ -210,8 +248,10 @@
     "block.tofurtherworld.forging_table_l1_t":"\u00A70Forging table§7 - §2§oLEVEL1",
     "block.tofurtherworld.grinder":"\u00A7fGrinder",
     "block.tofurtherworld.grinder_t":"\u00A70Grinder",
+    "block.tofurtherworld.pulverizer":"\u00A7fPulverizer",
     "block.tofurtherworld.refiner":"\u00A7fRefiner",
     "block.tofurtherworld.refiner_t":"\u00A70Refiner",
+    "block.tofurtherworld.wooden_sieve":"\u00A7fWooden sieve",
 
     "block.tofurtherworld.wooden_chair":"\u00A7fWooden chair",
     "block.tofurtherworld.wooden_longtable":"\u00A7fWooden long table",
@@ -237,17 +277,6 @@
     "itemGroup.tofurtherworld.block":"TFW-Block",
     "itemGroup.tofurtherworld.item":"TFW-Item",
     "itemGroup.tofurtherworld.tool":"TFW-Tool",
-
-    "item.tofurtherworld.15730063.common":"\u00A72Common",
-    "item.tofurtherworld.15730063.normal":"\u00A73Normal",
-    "item.tofurtherworld.15730063.uncommon":"\u00A7eUncommon",
-    "item.tofurtherworld.15730063.rare":"\u00A7bRare",
-    "item.tofurtherworld.15730063.htm":"\u00A79Hard to meet",
-    "item.tofurtherworld.15730063.epic":"\u00A7d\u00A7oEPIC",
-    "item.tofurtherworld.15730063.mystical":"\u00A7f\u00A7k||||||||||||||||||||",
-    "item.tofurtherworld.15730063.golden_legend":"\u00A76\u00A7lGolden Legend",
-    "item.tofurtherworld.15730063.ssr":"\u00A7c\u00A7l\u00A7oSSR",
-    "item.tofurtherworld.15730063.junk":"\u00A77Junk...",
 
     "inf.tfw.use.pda.start":"\u00A7a＋\u00A72－－－－－§b＜Ｗｅｌｃｏｍｅ￣ｔｏ￣ｕｓｅ￣\u00A7e\u00A7oＳｔａｒ￣Ｉｎｄｕｓｔｒｙ￣\u00A7r\u00A7bＯＳ＞§2－－－－－\u00A7a＋",
     "inf.tfw.use.pda.back": "§eBack",
