--- a/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
+++ b/src/main/resources/assets/tofurtherworld/lang/zh_cn.json
@@ -92,6 +92,19 @@
     "item.tofurtherworld.melon_gun":"\u00A7f西瓜枪",
     "item.tfw.mg.text":"\u00A7f你没有足够的西瓜种子。",
 
+    "item.tofurtherworld.copper_helmet":"\u00A7f铜制头盔",
+    "item.tofurtherworld.copper_chestplate":"\u00A7f铜制胸甲",
+    "item.tofurtherworld.copper_leggings":"\u00A7f铜制护腿",
+    "item.tofurtherworld.copper_boots":"\u00A7f铜制靴子",
+    "item.tofurtherworld.aluminum_helmet":"\u00A7f铝制头盔",
+    "item.tofurtherworld.aluminum_chestplate":"\u00A7f铝制胸甲",
+    "item.tofurtherworld.aluminum_leggings":"\u00A7f铝制护腿",
+    "item.tofurtherworld.aluminum_boots":"\u00A7f铝制靴子",
+    "item.tofurtherworld.stonebrick_helmet":"\u00A7f砖石头盔",
+    "item.tofurtherworld.stonebrick_chestplate":"\u00A7f砖石胸甲",
+    "item.tofurtherworld.stonebrick_leggings":"\u00A7f砖石护腿",
+    "item.tofurtherworld.stonebrick_boots":"\u00A7f砖石靴子",
+
     "item.tofurtherworld.tiny_rock":"\u00A7f小石块",
     "item.tofurtherworld.stone_chippings":"\u00A7f碎石块",
     "item.tofurtherworld.rich_ore_stone_chippings":"\u00A7f富矿碎石",
@@ -102,10 +115,14 @@
     "item.tofurtherworld.soil_heaps":"\u00A7f土壤堆",
     "item.tofurtherworld.wooden_staff":"\u00A7f木杖",
     "item.tofurtherworld.wooden_board":"\u00A7f木板",
+    "item.tofurtherworld.sawdust":"\u00A7f木屑",
     "item.tofurtherworld.turbid_fragment_of_obsidian":"\u00A7f浑浊的黑曜石碎片",
     "item.tofurtherworld.pure_fragment_of_obsidian":"\u00A7f纯净的黑曜石碎片",
     "item.tofurtherworld.turbid_obsidian":"\u00A7f浑浊的黑曜石",
     "item.tofurtherworld.pure_obsidian":"\u00A7f纯净的黑曜石",
+
+    "item.tofurtherworld.plastic_wood_board":"\u00A7f塑木木板",
+    "item.tofurtherworld.plastic_wood_stick":"\u00A7f塑木木棍",
 
     "item.tofurtherworld.apple_piece":"\u00A7f苹果片",
 
@@ -116,7 +133,26 @@
     "item.tofurtherworld.warped_wart_slurries":"\u00A7f诡异疣药浆",
 
     "item.tofurtherworld.empty_blueprint":"\u00A7f空白蓝图",
-    "item.tofurtherworld.blueprint":"\u00A7f蓝图",
+    "item.tofurtherworld.blueprint_r1":"\u00A7f蓝图",
+    "item.tofurtherworld.blueprint_r2":"\u00A7f蓝图",
+    "item.tofurtherworld.blueprint_r3":"\u00A7f蓝图",
+    "item.tofurtherworld.blueprint_r4":"\u00A7f蓝图",
+    "item.tofurtherworld.blueprint_r5":"\u00A7f蓝图",
+    "item.tofurtherworld.blueprint_r6":"\u00A7f蓝图",
+    "item.tofurtherworld.blueprint_r7":"\u00A7f蓝图",
+    "item.tofurtherworld.blueprint_r8":"\u00A7f蓝图",
+    "item.tofurtherworld.blueprint_r9":"\u00A7f蓝图",
+    "item.tofurtherworld.blueprint_r0":"\u00A7f蓝图",
+
+    "item.tofurtherworld.blueprint_r1.f":"\u00A72常见",
+    "item.tofurtherworld.blueprint_r2.f":"\u00A73普通",
+    "item.tofurtherworld.blueprint_r3.f":"\u00A7e少见",
+    "item.tofurtherworld.blueprint_r4.f":"\u00A7b稀有",
+    "item.tofurtherworld.blueprint_r5.f":"\u00A79难得一见",
+    "item.tofurtherworld.blueprint_r6.f":"\u00A7d\u00A7o史诗",
+    "item.tofurtherworld.blueprint_r8.f":"\u00A76\u00A7l金色传说",
+    "item.tofurtherworld.blueprint_r9.f":"\u00A7c\u00A7l\u00A7oSSR",
+    "item.tofurtherworld.blueprint_r0.f":"\u00A77垃圾。。。。。",
 
     "item.tofurtherworld.pda":"\u00A7b终端平板",
     "item.tfw.pda.text":"\u00A7e右击以使用",
@@ -151,6 +187,7 @@
     "block.tofurtherworld.alchemical_silver_block":"\u00A7f炼银块",
     "block.tofurtherworld.hard_aluminum_block":"\u00A7f坚铝块",
     "block.tofurtherworld.wooden_planks":"\u00A7f木板块",
+    "block.tofurtherworld.plastic_wood_planks":"\u00A7f塑木木板块",
 
     "block.tofurtherworld.white_lego":"\u00A7f白色\u00A7m乐高\u00A7r块",
     "block.tofurtherworld.orange_lego":"\u00A7f橙色\u00A7m乐高\u00A7r块",
@@ -210,8 +247,10 @@
     "block.tofurtherworld.forging_table_l1_t":"\u00A70锻造台§7·§2§o1级",
     "block.tofurtherworld.grinder":"\u00A7f研磨机",
     "block.tofurtherworld.grinder_t":"\u00A70研磨机",
+    "block.tofurtherworld.pulverizer":"\u00A7f粉碎机",
     "block.tofurtherworld.refiner":"\u00A7f精炼机",
     "block.tofurtherworld.refiner_t":"\u00A70精炼机",
+    "block.tofurtherworld.wooden_sieve":"\u00A7f木制筛子",
 
     "block.tofurtherworld.wooden_chair":"\u00A7f木制椅子",
     "block.tofurtherworld.wooden_longtable":"\u00A7f木制长桌",
@@ -235,17 +274,6 @@
     "itemGroup.tofurtherworld.block":"TFW-方块",
     "itemGroup.tofurtherworld.item":"TFW-物品",
     "itemGroup.tofurtherworld.tool":"TFW-工具",
-
-    "item.tofurtherworld.15730063.common":"\u00A72常见",
-    "item.tofurtherworld.15730063.normal":"\u00A73普通",
-    "item.tofurtherworld.15730063.uncommon":"\u00A7e少见",
-    "item.tofurtherworld.15730063.rare":"\u00A7b稀有",
-    "item.tofurtherworld.15730063.htm":"\u00A79难得一见",
-    "item.tofurtherworld.15730063.epic":"\u00A7d\u00A7o史诗",
-    "item.tofurtherworld.15730063.mystical":"\u00A7f\u00A7k||||||||||||||||||||",
-    "item.tofurtherworld.15730063.golden_legend":"\u00A76\u00A7l金色传说",
-    "item.tofurtherworld.15730063.ssr":"\u00A7c\u00A7l\u00A7oSSR",
-    "item.tofurtherworld.15730063.junk":"\u00A77垃圾。。。。。",
 
     "inf.tfw.use.pda.start":"\u00A7a＋\u00A72－－－－－－\u00A7b＜￣￣￣欢迎使用￣\u00A7e\u00A7o星空工业￣\u00A7r\u00A7b系统￣￣￣＞\u00A72－－－－－－\u00A7a＋",
     "inf.tfw.use.pda.back": "§e返回",
